# xiao-epaper

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
examples/: demo.rs  fetch.rs  png.rs  wifi.rs
server/: Cargo.toml
server/src/: dashboard.rs  main.rs  pet.rs
src/: demo.rs  lib.rs  main.rs  uc8179.rs
