[package]
name    = "xiao-epaper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum    = "0.8"
eyre    = "0.6"
image   = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tokio   = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
